mocked up article page

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "",
   "authors": [
-    "Davis Batten <davis.batten@zirous.com>"
+    "Davis Batten"
   ],
   "license": "MIT",
   "homepage": "",
