--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "bower install",
+    "prestart": "npm install",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -12,7 +13,9 @@
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "hbs": "^4.0.0",
     "less-middleware": "1.0.x",
+    "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
